--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@ p {
   padding: 0;
 }
 section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 ul,
 ol {
@@ -46,6 +46,7 @@ a {
 .header-box {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -57,13 +58,12 @@ a {
   display: flex;
 }
 .container {
-  width: 1158px;
-  padding: 0 15px;
+  width: 320px;
+  padding: 0 16px;
   margin: 0 auto;
 }
 .nav-panel {
-  display: flex;
-  gap: 40px;
+  display: none;
 }
 .logo {
   color: #4d5ae5;
@@ -73,19 +73,20 @@ a {
   letter-spacing: 0.03em;
   line-height: 1.17;
   text-transform: uppercase;
-  margin-right: 76px;
+  padding: 17px 0;
 }
-.studio:hover,
-.studio:focus {
-  color: #404bbf;
-}
+
 .address {
   font-style: normal;
   margin-left: auto;
+  display: none;
 }
-.list {
-  display: flex;
-  gap: 40px;
+.open-menu {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  line-height: 0;
+  padding: 0;
 }
 .logo span {
   color: #2e2f42;
@@ -95,33 +96,6 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   font-family: "Raleway";
-}
-
-.studio {
-  padding: 24px 0;
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #2e2f42;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  font-family: "Roboto";
-  display: block;
-}
-.current {
-  color: #404bbf;
-  position: relative;
-}
-.current::after {
-  content: "";
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
 }
 
 .contact {
@@ -143,8 +117,8 @@ a {
 .section-one {
   background-color: #2e2f42;
   text-align: center;
-  padding: 188px 0;
-  max-width: 1440px;
+  padding: 72px 0;
+  max-width: 320px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -155,37 +129,37 @@ a {
   background-position: center center;
   margin: 0 auto;
 }
-.section-one .container {
-}
+
 .title {
   color: #ffffff;
-  font-size: 56px;
   text-align: center;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
+  line-height: 1.1; /* 111.111% */
   letter-spacing: 0.02em;
   font-family: "Roboto";
-  max-width: 496px;
+  max-width: 216px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .button {
-  background-color: #4d5ae5;
-  color: #ffffff;
-  line-height: 1.5;
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  cursor: pointer;
-  padding: 16px 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
-  min-width: 169px;
-  height: 56px;
   border: none;
   display: block;
   margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 16px 32px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  line-height: 1.5;
+  min-width: 169px;
+  height: 56px;
 }
 .button:hover,
 .button:focus {
@@ -205,14 +179,11 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.text-svg {
-}
 .text-list {
-  display: flex;
-  gap: 24px;
+  display: block;
+  gap: 72px;
 }
 .text-item {
-  width: calc((100% - 72px) / 4);
 }
 .text-box {
   background-color: #f4f4fd;
@@ -221,23 +192,25 @@ a {
   border-radius: 4px;
   align-items: center;
   justify-content: center;
-  display: flex;
+  display: none;
   margin-bottom: 8px;
 }
 
 .sc-title {
   color: #2e2f42;
   font-family: "Roboto";
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
 }
 .sc-text {
   color: #434455;
   font-family: "Roboto";
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -249,14 +222,14 @@ a {
   background-color: #f4f4fd;
 }
 .team-list {
-  display: flex;
-  flex-direction: row;
-  gap: 24px;
+  display: block;
+  gap: 72px;
+  /* flex-direction: row; */
 }
 .team-item {
   background: var(--WHITE, #fff);
   border-radius: 0 0 4px 4px;
-  width: calc((100% -72px) / 4);
+
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -314,13 +287,10 @@ a {
 }
 /*? section#4*/
 .product-list {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
+  display: block;
+  gap: 48px;
 }
 .product-item {
-  width: calc((100% - 24px * 2) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .product-item:hover {
@@ -373,10 +343,15 @@ a {
 /* !  footers */
 .footer {
   background-color: #2e2f42;
-  padding: 100px 0;
+  padding: 96px 0;
 }
 .footer-container {
-  margin-right: 120px;
+  text-align: center;
+}
+.container-footer {
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 .footer-logo {
   color: #4d5ae5;
@@ -399,7 +374,12 @@ a {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  width: 264px;
+  width: 288px;
+  margin-bottom: 72px;
+  text-align: start;
+}
+.footer-box {
+  text-align: center;
 }
 .footer-title-link {
   color: #ffffff;
@@ -409,10 +389,14 @@ a {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 .footer-box-list {
   display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 16px;
+  margin-bottom: 72px;
 }
 .footer-box-icon {
   background-color: #4d5ae5;
@@ -424,8 +408,9 @@ a {
   align-items: center;
 }
 .container-footer {
-  display: flex;
-  align-items: baseline;
+  display: block;
+  align-items: center;
+  justify-content: center;
 }
 .footer-box-link {
   width: 100%;
@@ -455,20 +440,20 @@ a {
   margin-bottom: 16px;
 }
 .email-form {
-  display: flex;
-  gap: 24px;
+  display: block;
 }
 .email-box {
-  margin-left: 80px;
+  text-align: center;
 }
 .email-label {
 }
 .email-input {
-  width: 264px;
+  width: 288px;
   height: 40px;
   border: 1px solid #ffffff;
   background-color: transparent;
   font-size: 12px;
+  font-weight: 400;
   line-height: 2;
   letter-spacing: 0.04em;
   padding-left: 16px;
@@ -480,7 +465,8 @@ a {
   color: #ffffff;
 }
 .email-button {
-  margin-left: 24px;
+  margin: 16px auto;
+
   border-radius: 4px;
   background-color: #4d5ae5;
   min-width: 165px;
@@ -698,3 +684,199 @@ a {
 .modal-button:hover {
   background-color: #404bbf;
 }
+
+/*! ------------------------------ */
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .logo {
+    margin-right: 120px;
+  }
+  .nav-panel {
+    display: flex;
+    gap: 40px;
+  }
+  .studio {
+    padding: 24px 0;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #2e2f42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    font-family: "Roboto";
+    display: block;
+  }
+  .studio:hover,
+  .studio:focus {
+    color: #404bbf;
+  }
+  .current {
+    color: #404bbf;
+    position: relative;
+  }
+  .current::after {
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
+  .address {
+    display: block;
+  }
+  .open-menu {
+    display: none;
+  }
+  /* section 1 */
+  .section-one {
+    max-width: 768px;
+  }
+  .title {
+    max-width: 496px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+    font-size: 56px;
+    letter-spacing: 0.02em;
+  }
+  /* section2 */
+
+  .sc-title {
+    text-align: start;
+    font-size: 36px;
+    line-height: 1.1;
+    font-weight: 700;
+  }
+  .text-item {
+    width: 356px;
+  }
+  .text-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    width: calc((100%-24) / 2);
+  }
+  /* section3 */
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 96px;
+  }
+  /* section4 */
+  .product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 72px 24px;
+  }
+  .product-item {
+    width: calc((100%-24px) / 2);
+  }
+  /* footer */
+  .container-footer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    align-items: baseline;
+  }
+  .footer-box {
+    text-align: start;
+  }
+  .email-box {
+    text-align: start;
+  }
+  .email-text {
+    margin-bottom: 0;
+  }
+  .email-form {
+    display: flex;
+    align-items: baseline;
+  }
+  .email-button {
+    margin-left: 24px;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 1158px;
+  }
+  .logo {
+    margin-right: 76px;
+  }
+  .address {
+    display: flex;
+  }
+  .list {
+    display: flex;
+    gap: 40px;
+  }
+  /* section1 */
+  .section-one {
+    max-width: 1440px;
+    padding: 188px 0;
+  }
+  .title {
+    margin-bottom: 48px;
+  }
+  /* section2 */
+  .text-item {
+    width: calc((100% - 24px) / 4);
+  }
+  .text-box {
+    display: flex;
+  }
+  .text-list {
+    flex-wrap: nowrap;
+  }
+  .sc-title {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.5;
+  }
+  .sc-text {
+    font-weight: 400;
+  }
+  /* section3 */
+  .team-list {
+    flex-wrap: nowrap;
+    margin-bottom: 120px;
+  }
+  .team-item {
+    gap: 24px;
+  }
+  /* section4 */
+  .product-list {
+    column-gap: 24px;
+    row-gap: 48px;
+  }
+  .product-item {
+    width: calc((100% - 24px * 2) / 3);
+  }
+  /* footer */
+  .footer-container {
+    text-align: start;
+    margin-right: 60px;
+  }
+  .footer-box {
+    margin-right: 40px;
+  }
+}
+/* .container-footer{
+  display: flex;
+  align-items: baseline;
+} */
+/* .footer-container {
+  margin-right: 120px;
+} */
+/* .email-box {
+  margin-left: 80px;
+} */
