--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,6 @@ p {
   margin: 0;
   padding: 0;
 }
-section {
-  padding-top: 96px;
-  padding-bottom: 96px;
-}
 ul,
 ol {
   list-style-type: none;
@@ -27,6 +23,7 @@ ol {
 }
 img {
   display: block;
+  max-width: 100%;
 }
 a {
   text-decoration: none;
@@ -38,7 +35,7 @@ a {
   font-family: "Roboto";
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.11;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
@@ -126,20 +123,24 @@ a {
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   margin: 0 auto;
 }
-
+@media (min-resolution: 192dpi) {
+  .section-one {
+    background-image: url(../images/people-office@2.jpg);
+  }
+}
 .title {
   color: #ffffff;
-  text-align: center;
+  margin: 0 auto;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.1; /* 111.111% */
   letter-spacing: 0.02em;
   font-family: "Roboto";
   max-width: 216px;
-  margin: 0 auto;
+
   text-transform: capitalize;
   margin-bottom: 72px;
 }
@@ -179,11 +180,14 @@ a {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.text-list {
-  display: block;
-  gap: 72px;
+.text {
+  padding: 96px 0;
 }
 .text-item {
+  margin-bottom: 72px;
+}
+.text-item:last-child {
+  margin-bottom: 0;
 }
 .text-box {
   background-color: #f4f4fd;
@@ -220,18 +224,22 @@ a {
 }
 .team {
   background-color: #f4f4fd;
+  padding: 96px 0;
+}
+.container-team {
+  padding: 0 28px;
 }
 .team-list {
-  display: block;
-  gap: 72px;
-  /* flex-direction: row; */
 }
 .team-item {
   background: var(--WHITE, #fff);
   border-radius: 0 0 4px 4px;
-
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  margin-bottom: 72px;
+}
+.team-item:last-child {
+  margin-bottom: 0;
 }
 .team-svg {
   fill: #f4f4fd;
@@ -242,7 +250,7 @@ a {
   font-family: "Roboto";
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
@@ -251,7 +259,7 @@ a {
   text-align: center;
   font-family: "Roboto";
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
 }
@@ -286,12 +294,17 @@ a {
   align-items: center;
 }
 /*? section#4*/
+.product {
+  padding: 96px 0;
+}
 .product-list {
-  display: block;
-  gap: 48px;
 }
 .product-item {
+  margin-bottom: 48px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.product-item:last-child {
+  margin-bottom: 0;
 }
 .product-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -349,9 +362,7 @@ a {
   text-align: center;
 }
 .container-footer {
-  display: block;
   justify-content: center;
-  align-items: center;
 }
 .footer-logo {
   color: #4d5ae5;
@@ -407,11 +418,6 @@ a {
   justify-content: center;
   align-items: center;
 }
-.container-footer {
-  display: block;
-  align-items: center;
-  justify-content: center;
-}
 .footer-box-link {
   width: 100%;
   height: 100%;
@@ -465,8 +471,8 @@ a {
   color: #ffffff;
 }
 .email-button {
-  margin: 16px auto;
-
+  margin: auto;
+  margin-top: 16px;
   border-radius: 4px;
   background-color: #4d5ae5;
   min-width: 165px;
@@ -507,13 +513,13 @@ a {
   pointer-events: auto;
 }
 .modal {
-  padding: 72px 24px 24px 24px;
+  padding: 72px 16px 24px 16px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
-  min-height: 584px;
+  width: 288px;
+  min-height: 623px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -658,7 +664,7 @@ a {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin-right: 12px;
+  margin-right: 8px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -754,34 +760,45 @@ a {
   }
   .text-item {
     width: 356px;
+    margin-bottom: 0;
   }
   .text-list {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    width: calc((100%-24) / 2);
   }
   /* section3 */
+  .container-team {
+    padding: 0 108px;
+  }
   .team-list {
     display: flex;
     flex-wrap: wrap;
     gap: 64px 24px;
     justify-content: center;
     align-items: center;
-    margin-bottom: 96px;
+  }
+  .team-item {
+    margin-bottom: 0;
   }
   /* section4 */
   .product-list {
     display: flex;
     flex-wrap: wrap;
+    gap: 72px 12px;
     justify-content: center;
     align-items: center;
-    gap: 72px 24px;
   }
   .product-item {
-    width: calc((100%-24px) / 2);
+    margin-bottom: 0;
   }
   /* footer */
+  .footer-container {
+    text-align: start;
+  }
+  .footer-text {
+    width: 264px;
+  }
   .container-footer {
     display: flex;
     flex-wrap: wrap;
@@ -794,15 +811,19 @@ a {
   .email-box {
     text-align: start;
   }
-  .email-text {
-    margin-bottom: 0;
-  }
   .email-form {
     display: flex;
     align-items: baseline;
   }
   .email-button {
     margin-left: 24px;
+    margin-top: 0;
+  }
+  /* modal */
+  .modal {
+    padding: 72px 24px 24px 24px;
+    width: 408px;
+    min-height: 584px;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -828,6 +849,9 @@ a {
     margin-bottom: 48px;
   }
   /* section2 */
+  .text {
+    padding: 120px 0;
+  }
   .text-item {
     width: calc((100% - 24px) / 4);
   }
@@ -846,12 +870,14 @@ a {
     font-weight: 400;
   }
   /* section3 */
+  .container-team {
+    padding: 0;
+  }
+  .team {
+    padding: 120px 0;
+  }
   .team-list {
     flex-wrap: nowrap;
-    margin-bottom: 120px;
-  }
-  .team-item {
-    gap: 24px;
   }
   /* section4 */
   .product-list {
