--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,11 @@ a {
 }
 @media (min-resolution: 192dpi) {
   .section-one {
-    background-image: url(../images/people-office@2.jpg);
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office.jpg 2x);
   }
 }
 .title {
