--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ a {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/people-office.jpg 2x);
+      url(../images/people-office.jpg);
   }
 }
 .title {
