--- a/css/styles.css
+++ b/css/styles.css
@@ -230,12 +230,8 @@ a {
   background-color: #f4f4fd;
   padding: 96px 0;
 }
-.container-team {
-}
-.team-list {
-}
 .team-item {
-  background: var(--WHITE, #fff);
+  background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -851,8 +847,7 @@ a {
     gap: 72px 24px;
   }
   /* section3 */
-  .container-team {
-  }
+
   .team-list {
     display: flex;
     flex-wrap: wrap;
@@ -969,9 +964,6 @@ a {
     font-weight: 400;
   }
   /* section3 */
-  .container-team {
-    padding: 0;
-  }
   .team {
     padding: 120px 0;
   }
