--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,9 @@ a {
 }
 
 .address {
-  font-style: normal;
-  margin-left: auto;
   display: none;
 }
+
 .open-menu {
   border: none;
   background-color: transparent;
@@ -231,6 +230,8 @@ a {
   padding: 96px 0;
 }
 .team-item {
+  margin: 0 auto;
+  width: 264px;
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -362,7 +363,6 @@ a {
   margin-bottom: 72px;
 }
 .container-footer {
-  justify-content: center;
 }
 .footer-logo {
   color: #4d5ae5;
@@ -505,6 +505,22 @@ a {
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop2 {
+  padding: 72px 24px 40px 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  flex-direction: column;
 }
 .is-open {
   opacity: 1;
@@ -689,18 +705,9 @@ a {
 .modal-button:hover {
   background-color: #404bbf;
 }
-.menu-box {
-  padding: 72px 16px 40px 16px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 320px;
-  min-height: 640px;
-  background-color: #fcfcfc;
-}
+
 .menu-list {
-  margin-bottom: 168px;
+  margin-bottom: auto;
 }
 .adress-item {
   margin-bottom: 24px;
@@ -725,7 +732,7 @@ a {
   color: #434455;
 }
 .menu-item {
-  margin-bottom: 80px;
+  margin-bottom: 40px;
 }
 .menu-item:last-child {
   margin-bottom: 0;
@@ -734,7 +741,7 @@ a {
   font-family: Roboto;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.1px;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   text-align: left;
   color: #2e2f42;
@@ -791,11 +798,13 @@ a {
     border-radius: 2px;
   }
   .address {
-    display: block;
+    display: flex;
+    font-style: normal;
   }
   .list {
-    display: block;
+    display: flex;
     gap: 12px;
+    flex-direction: column;
   }
   .open-menu {
     display: none;
@@ -814,10 +823,7 @@ a {
     .section-one {
       background-image: linear-gradient(
           rgba(46, 47, 66, 0.7),
-          rgba{46,
-          47,
-          66,
-          0.7}
+          rgba(46, 47, 66, 0.7)
         ),
         url(../images/people-office-tab2x.jpg);
     }
@@ -856,7 +862,7 @@ a {
     align-items: center;
   }
   .team-item {
-    margin-bottom: 0;
+    margin: 0;
   }
   /* section4 */
   .product-list {
@@ -879,6 +885,7 @@ a {
     width: 264px;
   }
   .container-footer {
+    max-width: 530px;
     display: flex;
     flex-wrap: wrap;
     gap: 72px 24px;
@@ -909,6 +916,12 @@ a {
 @media screen and (min-width: 1158px) {
   .container {
     width: 1158px;
+    padding: 0 15px;
+  }
+  .contact {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
   .logo {
     margin-right: 76px;
@@ -918,6 +931,7 @@ a {
   }
   .list {
     display: flex;
+    flex-direction: row;
     gap: 40px;
   }
   /* section1 */
@@ -982,6 +996,9 @@ a {
   .footer-container {
     text-align: start;
     margin-right: 60px;
+  }
+  .container-footer {
+    max-width: none;
   }
   .footer-box {
     margin-right: 40px;
